--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1> <center><a href="https://www.linkedin.com/in/yepurivamsikrishna/" Vamsi Krishna Yepuri </a></center></h1>
+<h1> <center> <a href="https://www.linkedin.com/in/yepurivamsikrishna/"> Vamsi Krishna Yepuri </a> </center> </h1>
 
 
 <a href="git.html" Git </a>
