--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1> <center> <a href="https://www.linkedin.com/in/yepurivamsikrishna/"> Vamsi Krishna Yepuri </a> </center> </h1>
+<br>
 
-
-<a href="git.html" Git </a>
+<a href="git.html"> Git </a>
 
 
