--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <h1> <center> <a href="https://www.linkedin.com/in/yepurivamsikrishna/"> Vamsi Krishna Yepuri </a> </center> </h1>
 <br>
 
-<a href="git.html"> Git </a>
-<a href="game.html"> Drinking Game </a>
+<a href="git.html" class="link"> Git </a>
+<a href="tls.html" class="link"> TLS </a>
+<a href="game.html" class="link"> Drinking Game </a>
 
+<style>
 
+.link{
+  background-color: blue;
+  padding: 10px 50px;  
+  text-decoration: none;
+  border-radius: 10px;
+  color: white;
+  margin: 0px 10px;
+}
+
+</style>
